# Personal-Finance-Assistant

./: README.md  docker-compose.yml  dummy_transactions.csv  setup.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_initial_tables.py  146c269ce0aa_add_user_preferences.py  3c85f5c111e0_create_subscriptions_and_anomalies.py  a1b2c3d4e5f6_add_currency_to_detections.py  cb63873c2c7d_add_enums_and_budgets.py  f3a516ab1779_add_chat_messages.py
backend/app/: main.py  worker.py
backend/app/agent/: __init__.py  agent.py  nodes.py  state.py  tools.py
backend/app/api/v1/: __init__.py  auth.py  budget.py  chat.py  transactions.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  llm_config.py  logger.py  security.py
backend/app/models/: __init__.py  budget.py  chat.py  preference.py  transaction.py  user.py
backend/app/routers/: auth.py  budget.py  transactions.py  users.py
backend/app/schemas/: budget.py  chat.py  preference.py  transaction.py  user.py
backend/app/services/: anomalies.py  budget.py  chat.py  deduplication.py  ingestion.py  llm.py  memory.py  normalizer.py  receipt.py  subscriptions.py  tasks.py  transactions.py  user.py
backend/scripts/: verify_ingestion.py
documentation/: additional_notes.md  design_note.md  personal_finance_assistant_plan.md  revonix_project_plan.md
documentation/modules/: 01-setup-and-auth.md  02-data-ingestion.md  03-budget-tracking.md  (+4 more)
frontend/: .dockerignore  Dockerfile  middleware.ts  package-lock.json
(+22 files in other folders)
