[project]
name = "revonix"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "clerk-backend-api>=5.0.7",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.4",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "pytest>=9.0.3",
    "python-multipart>=0.0.32",
    "redis>=5.3.1",
    "sqlalchemy>=2.0.50",
    "svix>=1.95.1",
    "uvicorn>=0.49.0",
]
